--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "export-from-json": "^1.7.0",
     "fs": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
+    "js-cookie": "^3.0.5",
     "json-as-xlsx": "^2.4.6",
     "json2xls": "^0.1.2",
     "react": "^18.2.0",
