--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://schooloil-api.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -14,18 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "cloudinary": "^1.31.0",
-    "export-from-json": "^1.7.0",
-    "fs": "^0.0.1-security",
     "gh-pages": "^6.0.0",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
-    "json-as-xlsx": "^2.4.6",
-    "json2xls": "^0.1.2",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
     "react-circular-progressbar": "^2.1.0",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-html-table-to-excel": "^2.0.0",
     "react-redux": "^8.0.2",
@@ -36,10 +30,8 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "styled-components": "^5.3.6",
-    "universal-cookie": "^5.0.0",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "universal-cookie": "^6.1.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -64,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
